pkgs/num_dart/lib/src/numdart_bindings.dart

// Automatically generated by ffigen. DO NOT EDIT.
// ignore_for_file: type=lint, unused_element, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
@ffi.DefaultAsset('package:num_dart/num_dart')
library;

import 'dart:ffi' as ffi;

/// Natively sort a double precision float64 array in-place on the FFI heap.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Int)>()
external void native_sort_double(ffi.Pointer<ffi.Double> array, int size);

/// Natively sort a single precision float32 array in-place.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Int)>()
external void native_sort_float(ffi.Pointer<ffi.Float> array, int size);

/// Natively sort an int64 array in-place.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.LongLong>, ffi.Int)>()
external void native_sort_int64(ffi.Pointer<ffi.LongLong> array, int size);

/// Natively sort an int32 array in-place.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Int)>()
external void native_sort_int32(ffi.Pointer<ffi.Int> array, int size);

/// ----------------------------------------------------------------------------
/// Double Precision (Float64) Vector Kernels
/// ----------------------------------------------------------------------------
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_add_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_sub_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_mul_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Int,
  )
>()
external void v_div_double(
  ffi.Pointer<ffi.Double> a,
  ffi.Pointer<ffi.Double> b,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_sin_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_cos_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_exp_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>, ffi.Int)
>()
external void v_log_double(
  ffi.Pointer<ffi.Double> src,
  ffi.Pointer<ffi.Double> res,
  int size,
);

@ffi.Native<ffi.Double Function(ffi.Pointer<ffi.Double>, ffi.Int)>()
external double r_sum_double(ffi.Pointer<ffi.Double> src, int size);

/// ----------------------------------------------------------------------------
/// Single Precision (Float32) Vector Kernels
/// ----------------------------------------------------------------------------
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_add_float(
  ffi.Pointer<ffi.Float> a,
  ffi.Pointer<ffi.Float> b,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_sub_float(
  ffi.Pointer<ffi.Float> a,
  ffi.Pointer<ffi.Float> b,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_mul_float(
  ffi.Pointer<ffi.Float> a,
  ffi.Pointer<ffi.Float> b,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Pointer<ffi.Float>,
    ffi.Int,
  )
>()
external void v_div_float(
  ffi.Pointer<ffi.Float> a,
  ffi.Pointer<ffi.Float> b,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_sin_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_cos_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_exp_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Float>, ffi.Pointer<ffi.Float>, ffi.Int)
>()
external void v_log_float(
  ffi.Pointer<ffi.Float> src,
  ffi.Pointer<ffi.Float> res,
  int size,
);

@ffi.Native<ffi.Float Function(ffi.Pointer<ffi.Float>, ffi.Int)>()
external double r_sum_float(ffi.Pointer<ffi.Float> src, int size);
